--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "vue": "^3.2.13",
     "vue-cookies": "^1.8.3",
     "vue-router": "^4.0.3",
+    "vue3-cookies": "^1.0.6",
     "vuetify": "^3.3.7"
   },
   "devDependencies": {
