--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "@mdi/js": "^7.2.96",
+    "apexcharts": "^3.41.0",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
     "vue": "^3.2.13",
@@ -16,6 +17,7 @@
     "vue-cookies": "^1.8.3",
     "vue-plyr": "^7.0.0",
     "vue-router": "^4.0.3",
+    "vue3-apexcharts": "^1.4.4",
     "vue3-cookies": "^1.0.6",
     "vuetify": "^3.3.8"
   },
