--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "@mdi/js": "^7.2.96",
     "axios": "^1.4.0",
     "core-js": "^3.8.3",
+    "mitt": "^3.0.1",
     "vue": "^3.2.13",
     "vue-cookie": "^1.1.4",
     "vue-cookies": "^1.8.3",
